--- a/src/styles/block/gallery.scss
+++ b/src/styles/block/gallery.scss
@@ -1,7 +1,7 @@
 .gallery {
 
   &__title {
-    font-family: 'Montserrat';
+    font-family: Montserrat, sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 36px;
@@ -28,7 +28,7 @@
     transition: all 0.3s;
 
     @include onTablet {
-    margin-bottom: 32px;
+      margin-bottom: 32px;
     }
 
     @include onDesktop {
