--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -20,8 +20,7 @@
     height: 300px;
 
     @include onTablet {
-    position: absolute;
-
+      position: absolute;
       width: 50%;
       height: 384px;
     }
@@ -46,12 +45,12 @@
     width: 170px;
     text-align: center;
     transform: translateX(-50%);
-    font-family: 'Montserrat';
+    font-family: Montserrat, sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 30px;
     line-height: 100%;
-    color: #0F0E08;
+    color: #0f0e08;
 
     @include onTablet {
       width: 220px;
@@ -72,11 +71,11 @@
   }
 
   &__title {
-    font-family: 'Montserrat';
+    font-family: Montserrat, sans-serif;
     font-style: normal;
     font-weight: 700;
     line-height: 120%;
-    color: #000000;
+    color: #000;
     font-size: 45px;
     text-align: center;
     padding: 20px 0 ;
@@ -121,7 +120,7 @@
 
   &__flowers {
     color: $text-color;
-    font-family: 'IBM Plex Sans';
+    font-family: IBM Plex Sans, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -150,7 +149,7 @@
   }
 
   &__event {
-    font-family: 'IBM Plex Sans';
+    font-family: IBM Plex Sans, sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
