--- a/src/styles/block/menu.scss
+++ b/src/styles/block/menu.scss
@@ -30,7 +30,7 @@
     margin: 0;
     padding: 0;
 
-    &--margin{
+    &--margin {
       margin-right: 28px;
 
       @include onTablet {
@@ -72,7 +72,7 @@
     color: $clor-white;
     text-decoration: none;
 
-    font-family: 'IBM Plex Sans';
+    font-family: IBM Plex Sans, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 22px;
@@ -117,7 +117,7 @@
 .schedule {
 
   &__work {
-    font-family: 'IBM Plex Sans';
+    font-family: IBM Plex Sans, sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
@@ -138,8 +138,7 @@
   }
 
   &__dayoff {
-    width: 170px;
-    font-family: 'IBM Plex Sans';
+    font-family: IBM Plex Sans, sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
@@ -152,6 +151,4 @@
       width: 144px;
     }
   }
-
-
 }
