--- a/src/styles/block/subscription.scss
+++ b/src/styles/block/subscription.scss
@@ -15,24 +15,23 @@
     height: 386px;
     background-size: cover;
     background-position: center;
-    padding: 88px 0 88px;
+    padding: 88px 0;
 
     @include onTablet {
       height: 380px;
-      padding: 82px 0 82px;
+      padding: 82px 0;
     }
 
     @include onDesktop {
       height: 550px;
-      padding: 163px 0 163px;
+      padding: 163px 0;
     }
   }
-
 
   &__title {
     color: $clor-white;
     text-align: center;
-    font-family: 'Montserrat';
+    font-family: Montserrat, sans-serif;
     font-style: normal;
     font-weight: 700;
     line-height: 100%;
@@ -43,15 +42,11 @@
       font-size: 48px;
       margin-bottom: 16px;
     }
-
-    @include onDesktop {
-    }
-
   }
 
   &__text {
     color: $clor-white;
-    font-family: 'IBM Plex Sans';
+    font-family: IBM Plex Sans, sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -78,7 +73,7 @@
     }
 
     @include onDesktop {
-      gap: 30px;;
+      gap: 30px;
     }
   }
 
@@ -86,13 +81,12 @@
     width: 100%;
     height: 50px;
     color: #687480;
-    font-family: 'Montserrat';
+    font-family: Montserrat, sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: 100%;
     padding-left: 24px;
-    height: 50px;
     border: none;
 
     @include onTablet {
@@ -110,12 +104,11 @@
     width: 50px;
     height: 50px;
     border: none;
-    background-color: #F14A27;
+    background-color: #f14a27;
     background-image: url(../images/formButton.svg);
     background-repeat: no-repeat;
-    // background-size: 50%;
     background-position: center;
-    transition: all .3s;
+    transition: all 0.3s;
 
     @include onTablet {
       width: 70px;
