--- a/src/styles/block/event.scss
+++ b/src/styles/block/event.scss
@@ -1,7 +1,7 @@
 .event {
 
   &__title {
-    font-family: 'Montserrat';
+    font-family: Montserrat, sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 48px;
@@ -18,7 +18,7 @@
     }
 
     &--card {
-      font-family: 'Montserrat';
+      font-family: Montserrat, sans-serif;
       font-style: normal;
       font-weight: 400;
       font-size: 28px;
@@ -36,7 +36,7 @@
         content: "";
         width: 15px;
         height: 15px;
-        background-color: #F14A27;
+        background-color: #f14a27;
       }
 
       @include onTablet {
@@ -59,7 +59,7 @@
         content: "";
         width: 15px;
         height: 15px;
-        background-color: #F14A27;
+        background-color: #f14a27;
       }
     }
   }
@@ -88,21 +88,18 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin-bottom: 60px;
 
+    @include onTablet {
       margin-bottom: 60px;
-
-      @include onTablet {
-        margin-bottom: 60px;
       gap: 40px;
+    }
 
-      }
-
-      @include onDesktop {
-        margin-bottom: 104px;
-        // justify-content: space-between;
-        flex-direction: row;
-        gap: 130px;
-      }
+    @include onDesktop {
+      margin-bottom: 104px;
+      flex-direction: row;
+      gap: 130px;
+    }
   }
 
   &__exhibitio {
@@ -121,13 +118,12 @@
     }
 
     &--steil {
-      font-family: 'IBM Plex Sans';
+      font-family: IBM Plex Sans, sans-serif;
       font-style: normal;
       font-weight: 500;
       font-size: 16px;
       line-height: 100%;
     }
-
   }
 
   &__exhibi {
@@ -162,7 +158,7 @@
   }
 
   &__descr {
-    font-family: 'IBM Plex Sans';
+    font-family: IBM Plex Sans, sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 16px;
@@ -204,8 +200,7 @@
   &__container {
 
     max-width: 570px;
-    // height: 204px;
-    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: rgba(26, 90, 76, 0.25);
     background-color: $clor-white;
     transform: translateY(-40%);
     padding: 20px 0;
@@ -222,7 +217,6 @@
       margin-bottom: 200px;
     }
   }
-
 
   &__info {
     display: flex;
@@ -256,7 +250,7 @@
     color: #687480;
 
     &--typ {
-      font-family: 'IBM Plex Sans';
+      font-family: IBM Plex Sans, sans-serif;
       font-style: normal;
 
       @include onTablet {
@@ -266,13 +260,12 @@
   }
 
   &__title {
-    font-family: 'Montserrat';
+    font-family: Montserrat, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 28px;
     line-height: 100%;
-    text-align: start;
-    color: #0F0E08;
+    color: #0f0e08;
     text-align: center;
 
     @include onTablet {
