--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -74,7 +74,6 @@
     
     @include onTablet {
       flex-direction: row;
-      // justify-content: space-between;
       gap: 20px;
       margin-bottom: 64px;
       padding-right: 120px;
@@ -94,7 +93,7 @@
   &__text {
     width: 130px;
     color: $text-color;
-    font-family: 'IBM Plex Sans';
+    font-family: IBM Plex Sans, sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -131,8 +130,7 @@
     width: 130px;
 
     @include onDesktop {
-    width: 170px;
-
+      width: 170px;
     }
   }
 
@@ -143,7 +141,6 @@
   &__contact {
     margin-bottom: 20px;
   }
-
 
   &__line {
     background-color: $color-green;
@@ -196,10 +193,10 @@
     }
   }
 
-
   &__item {
     list-style: none;
     width: 130px;
+
     &:first-child {
       margin-bottom: 20px;
     }
@@ -217,7 +214,6 @@
     padding: 0;
   }
 
-
   &__box {
     display: flex;
     gap: 20px;
@@ -231,11 +227,11 @@
   &__watermark {
     color: $text-color;
     text-align: center;
-    font-family: 'IBM Plex Sans';
+    font-family: IBM Plex Sans, sans-serif;
     font-size: 12px;
     font-style: normal;
     font-weight: 300;
-    line-height: 140.625%;
+    line-height: 140.63%;
 
     &--block {
       display: flex;
