--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -7,14 +7,13 @@
   &__title {
     display: flex;
     font-weight: 400;
-    justify-content: space-between;
     margin-top: 0;
   }
   &__titl {
     font-family: Montserrat, sans-serif;
-    margin-right: 5px;
+    margin-right: 25px;
     font-weight: 400;
-    font-size: 32px;
+    font-size: 36px;
     margin-bottom: 27px;
     margin-top: 32px;
   }
@@ -51,6 +50,7 @@
     font-style: normal;
     font-weight: 300;
     grid-column: 1/-1;
+    text-align: left;
 
     @include onTablet {
       grid-column: 1/7;
@@ -58,6 +58,7 @@
 
     @include onDesktop {
       grid-column: 9/13;
+      margin-top: 50%;
     }
   }
 
@@ -66,6 +67,7 @@
       display: flex;
       justify-content: space-between;
       margin: 45px 100px 16px;
+      text-align: left;
     }
     &-title {
       color: $text-color;
@@ -75,6 +77,23 @@
       font-weight: 400;
       line-height: 100%;
       margin: 0 100px 50px;
+      text-align: left;
+    }
+    &-info {
+      color: #687480;
+      font-family: IBM Plex Sans, sans-serif;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 100%;
+    }
+    &-date {
+      color: #1a5a4c;
+      font-family: IBM Plex Sans,sans-serif;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 150%
     }
     &-art {
       width: 100%;
