--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,5 +1,6 @@
 .gallery {
   margin-left: 56px;
+  margin-right: 55px;
   &__title {
     color: $text-color;
     font-family: Montserrat, sans-serif;
