--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -34,10 +34,15 @@
 
     @include onTablet {
       font-size: 56px;
-      margin-top: 134px;
+      margin-top: 206px;
+      text-align: left;
     }
     @include onDesktop {
-      font-size: 80px;
+      font-size: 78px;
+    }
+
+    @include onComputer {
+      font-size: 120px;
     }
   }
   &__right {
