--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -18,6 +18,12 @@
   }
 }
 
+@mixin onComputer {
+  @media (min-width: 1400px) {
+    @content;
+  }
+}
+
 @mixin pageGrid {
   --columns: 2;
   display: grid;
