--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -51,6 +51,7 @@
       &-img {
         width: 200%;
         @include onTablet {
+          margin-left: 60px;
           width: 130%;
          }
       }
@@ -107,10 +108,9 @@
     }
     &-right {
       grid-column: 1/3;
-      column-count: 2;
 
       @include onTablet {
-        grid-column: 2/5;
+        grid-column: 2/6;
       }
       @include onDesktop {
         grid-column: 8/13;
@@ -121,6 +121,7 @@
 
     &__item {
       list-style-type: none;
+      display: grid;
     }
     &__link {
       text-decoration: none;
@@ -139,4 +140,11 @@
         @include hover(transform , scale(1.1))
       }
     }
+
+    &__list {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      padding-left: 0px;
+    }
+
   }
