--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -17,6 +17,7 @@
     font-style: normal;
     font-weight: 400;
     margin-bottom: 50px;
+    margin-top: 30px;
 
     @include onTablet {
       margin-bottom: 72px;
