--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -26,8 +26,8 @@
       column-gap: 2/3;
       @include onTablet {
         column-gap: 1/2;
-        margin-left: 65px;
-      margin-top: 62px;
+        margin-left: 55px;
+        margin-top: 62px;
     }
     }
 
@@ -51,28 +51,27 @@
       &-img {
         width: 200%;
         @include onTablet {
-          margin-left: 60px;
-          width: 130%;
+          width: 100%;
          }
       }
 
       @include onTablet {
-        grid-column: 1/5;
+        grid-column: 2/6;
+        margin-bottom: 20px;
+        margin-top: 30px;
       }
 
+      @include onDesktop {
+        border-left: 1px rgba(26, 90, 76, 0.50) solid;
+        height: 260px;
+        margin-top: 0px;
+        margin-left: 45px;
+        grid-column: span 1;
 
-
-    @include onDesktop {
-      border-left: 2px rgba(26, 90, 76, 0.50) solid;
-      height: 260px;
-      margin-left: 65px;
-      grid-column: span 1;
-
-      &-img {
-        display: none;
+        &-img {
+          display: none;
+        }
       }
-    }
-
   }
 
   &__nav {
@@ -84,7 +83,7 @@
       font-size: 14px;
       font-style: normal;
       font-weight: 400;
-      margin-top: 20px;
+      margin-top: 0px;
 
     &-left {
       grid-column: 1/2;
@@ -122,6 +121,7 @@
     &__item {
       list-style-type: none;
       display: grid;
+      padding-bottom: 20px;
     }
     &__link {
       text-decoration: none;
@@ -145,6 +145,10 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       padding-left: 0px;
-    }
+      margin-top: 20px;
 
+      @include onDesktop {
+        margin-top: 0px;
+      }
+    }
   }
