--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -6,6 +6,10 @@
   line-height: 150%;
 
   &__title {
-    margin-left: 56px;
+    margin-left: 20px;
+
+    @include onTablet {
+      margin-left: 56px;
+    }
   }
 }
