--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,6 +1,11 @@
 .gallery {
-  margin-left: 56px;
-  margin-right: 55px;
+  margin-left: 20px;
+  margin-right: 20px;
+  @include onTablet {
+    margin-left: 56px;
+    margin-right: 55px;
+  }
+
   &__title {
     color: $text-color;
     font-family: Montserrat, sans-serif;
@@ -92,7 +97,7 @@
 	background-position: center;
 	background-repeat: no-repeat;
   @include onTablet {
-    width: 40vw;
+    width: 41vw;
   }
   @include onDesktop {
     width: 100%;
@@ -102,7 +107,6 @@
 
 .dots {
 	position: absolute;
-	bottom: 20px;
 	left: 50%;
 	transform: translateX(-50%);
 	gap: 15px;
@@ -112,11 +116,9 @@
 	align-items: center;
 	justify-content: center;
 
-  @media (min-width: 550px) {
-    display: none;;
+  @include onDesktop {
+    display: none;
   }
-
-
 
 	a {
 		$dots-size: 8px;
