--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -9,7 +9,6 @@
     background-position-x: center;
   }
 
-
   &__content {
     display: grid;
     grid-template-rows: 70vh 30vh;
@@ -25,12 +24,12 @@
 
   &__title {
     font-weight: 700;
-    font-size: 36px;
+    font-size: 46px;
     color: #000;
-    line-height: 100%;
+    line-height: 120%;
     letter-spacing: -1.5px;
     text-align: center;
-
+    margin-bottom: 0px;
 
     @include onTablet {
       font-size: 56px;
@@ -45,6 +44,7 @@
       font-size: 120px;
     }
   }
+
   &__right {
     background-image: url(../images/namu_header.png);
     margin-top: -150px;
@@ -65,14 +65,19 @@
     }
 
     &-button {
-      margin-top: 89px;
+      margin-top: 20px;
       margin-right: 30px;
       text-align: center;
       cursor: pointer;
       @include hover(transform , scale(1.1));
 
       @include onTablet {
-        float:right;
+        float:left;
+        margin-top: 38px;
+      }
+      @include onDesktop {
+        float: right;
+        margin-top: 89px;
       }
     }
 
