--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -23,6 +23,7 @@
     background-image: url(../images/instagram-logo.svg);
   }
   &--facebook {
+    margin-right: 20px;
     background-image: url(../images/facebook-logo.svg);
   }
 }
