--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -80,7 +80,17 @@
       margin-top: 20px;
 
       &-bold {
-        font-weight: bold;
+        font-weight: 500;
+
+        &-title {
+          @include onTablet {
+            font-weight: 400;
+          }
+        }
+      }
+
+      &-left {
+        margin-top: 0px;
       }
     }
     &__title {
