--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -1,8 +1,13 @@
 .event {
   margin-bottom: 104px;
   @include pageGrid;
-  margin-left: 55px;
-  margin-right: 55px;
+  margin-left: 20px;
+  margin-right: 20px;
+
+  @include onTablet {
+    margin-left: 55px;
+    margin-right: 55px;
+  }
 
   &__title {
     display: flex;
@@ -13,9 +18,13 @@
     font-family: Montserrat, sans-serif;
     margin-right: 25px;
     font-weight: 400;
-    font-size: 36px;
+    font-size: 26px;
     margin-bottom: 27px;
     margin-top: 32px;
+    @include onTablet {
+      font-size: 36px;
+      margin-right: 15px;
+    }
   }
 
   &__description {
@@ -66,18 +75,25 @@
     &__title {
       display: flex;
       justify-content: space-between;
-      margin: 45px 100px 16px;
+      margin: 24px 21px 0;
       text-align: left;
+      @include onTablet {
+        margin: 45px 100px 16px;
+      }
     }
     &-title {
       color: $text-color;
       font-family: Montserrat, sans-serif;
-      font-size: 36px;
+      font-size: 28px;
       font-style: normal;
       font-weight: 400;
       line-height: 100%;
-      margin: 0 100px 50px;
-      text-align: left;
+      margin-top: 20px;
+      @include onTablet {
+        text-align: left;
+        margin: 0 100px 50px;
+        font-size: 36px;
+      }
     }
     &-info {
       color: #687480;
@@ -113,13 +129,18 @@
     }
     &-text {
       text-align: center;
-      width: 570px;
-      height: 204px;
+      width: 280px;
+      height: 140px;
       z-index: 1;
       margin-top: -100px;
       background-color: $main-color;
       background: $main-color;
       box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
+
+      @include onTablet {
+        width: 570px;
+        height: 204px;
+      }
     }
   }
 }
