--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -5,10 +5,14 @@
 
   &-title {
     font-family: Montserrat, sans-serif;
-    font-size: 48px;
+    font-size: 36px;
     font-style: normal;
     font-weight: 700;
     margin-bottom: 16px;
+
+    @include onTablet {
+      font-size: 48px;
+    }
   }
 
   &-desc {
@@ -16,8 +20,7 @@
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    margin-bottom: 50px;
-    margin-top: 30px;
+    margin: 30px 20px;
 
     @include onTablet {
       margin-bottom: 72px;
@@ -73,6 +76,7 @@
   }
   &__form {
     display: flex;
+    margin: 10px 20px;
     grid-column: span 2;
 
     @include onTablet {
