--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,36 @@
-$c-gray: #eee;
+$clr--bg: #ffffff;
+$clr--black: #000000;
+$clr--bg-opacity: #18181A;
+$clr--main: #0F0E08;
+$clr--nav: #ffffff;
+$clr--nav-hover:  #9fadc2;
+$clr--bg-menu: #1A5A4C;
+$clr--bg-menu-under: rgba(24, 24, 26, 0.50);
+$clr--line-footer: rgba(26, 90, 76, 0.50);
+$clr--line-header: rgba(255, 255, 255, 0.50);
+$clr--grad-bg: linear-gradient(0deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0.75) 100%);
+
+$clr--article-title: #687480;
+$clr--article-text: #4E4E4E;
+
+// Form
+$clr--bg-form: #ffffff;
+$clr--input-form: #687480;
+
+$clr--btn-form: #F14A27;
+
+// Button
+$clr--btn-pressed: #111111;
+$clr--pagination:#E0E0E0;
+
+
+
+// Media
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+$wideScreen-min-width: 1440px;
+
+// Fonts
+$font--main: 'IBM Plex Sans', Helvetica, sans-serif;
+$font--secondary: 'Montserrat', Helvetica, sans-serif;
+
