--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,34 @@
-@import "utils";
+@import "utils/vars";
+@import "utils/reset";
+@import "utils/mixins";
+@import "utils/extends";
+
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/container";
+@import "blocks/page";
+@import "blocks/header";
+@import "blocks/header-button";
+@import "blocks/header-bottom";
+@import "blocks/icons";
+@import "blocks/top-bar";
+@import "blocks/menu";
+@import "blocks/nav";
+@import "blocks/section-title";
+@import "blocks/events";
+@import "blocks/event";
+@import "blocks/lecture";
+@import "blocks/gallery";
+@import "blocks/photos";
+@import "blocks/slider";
+@import "blocks/subscription";
+@import "blocks/contact-form";
+
+@import "blocks/form";
+@import "blocks/footer";
+@import "blocks/footer-content";
+@import "blocks/footer-menu";
+@import "blocks/back-top";
+
+@import "libs/slick";
