--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,42 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
+  color: $clr--black;
+  font-family: $font--secondary;
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 100%;
+}
+
+%h2 {
+  color: $clr--main;
+  font-family: $font--secondary;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 100%;
+}
+
+%h3 {
+  color: $clr--main;
+  font-family: $font--secondary;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 100%;
+}
+
+%logo {
+  color: $clr--main;
+  font-family: $font--secondary;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 100%;
+}
+
+%footer-content {
+  color: $clr--main;
+  font-weight: 400;
+  line-height: 140.625%;
+}
+
+%header-content {
+  color: $clr--nav;
   font-weight: 400;
 }
