--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -62,7 +62,7 @@
     position: absolute;
     height: 100vh;
     width: 100%;
-    object-fit: cover;
+    object-fit: fill;
     cursor: pointer;
     @include hover(transform, scale(1.05));
     @include onDesktop {
