--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -105,6 +105,10 @@
         top: -30px;
         transform: rotate(-90deg);
       }
+      &-text {
+      cursor: pointer;
+      @include hover(transform , scale(1.1));
+      }
     }
   }
 }
