--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -79,6 +79,7 @@
     margin: 10px 20px;
     grid-column: span 2;
 
+
     @include onTablet {
       grid-column: span 3;
     }
@@ -126,4 +127,11 @@
       }
     }
 }
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 40px white inset !important;
 }
