--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -2,10 +2,16 @@
   &__link {
     color: inherit;
     text-decoration: none;
-    font-size: 22px;
-    line-height: 22px;
+    font-size: 16px;
+    line-height: 16px;
     letter-spacing: 2px;
     position: relative;
+
+    @include onDesktop {
+      font-size: 22px;
+      line-height: 22px;
+    }
+
 
     &::after {
       content: "";
@@ -21,7 +27,7 @@
     }
 
     &:hover::after {
-      transform: scale(1);
+      transform: scale(1.3);
     }
   }
 
