--- a/src/styles/blocks/main/section.scss
+++ b/src/styles/blocks/main/section.scss
@@ -59,6 +59,21 @@
   }
 }
 
+.image-animation {
+  opacity: 0;
+  transform: translateX(-50%);
+}
+
+.right {
+  transform: translateX(50%);
+}
+
+.image-animation.show {
+  opacity: 1;
+  transition: all $transition-duration;
+  transform: translateX(0%);
+}
+
 .event-description {
   grid-row: 3;
   grid-column: 1 / -1;
