--- a/src/styles/blocks/main/subscribe.scss
+++ b/src/styles/blocks/main/subscribe.scss
@@ -77,6 +77,10 @@
       display: block;
       @include btnSize;
       background-color: $orange;
+
+      &:hover {
+        background-color: rgb(214, 80, 2);
+      }
     }
   }
 }
