--- a/src/styles/utils/normalize.scss
+++ b/src/styles/utils/normalize.scss
@@ -4,6 +4,10 @@
   border: none;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 h1,
 h2,
 h3,
@@ -29,6 +33,10 @@ h6 {
   color: $page-black;
 }
 
+button, a {
+  cursor: pointer
+}
+
 ul {
   list-style: none;
   margin: 0;
@@ -38,7 +46,6 @@ ul {
 a {
   color: $page-black;
   text-decoration: none;
-  cursor: pointer;
 
   @include hover(color, rgb(255, 55, 0));
 
