--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.7s;
+  transition: #{$_property} $transition-duration;
   &:hover {
     #{$_property}: $_toValue;
   }
