--- a/src/styles/block/event.scss
+++ b/src/styles/block/event.scss
@@ -171,11 +171,19 @@
     background-image: url(../images/event-3.jpg);
     background-repeat: no-repeat;
     width: 100%;
-    height: 550px;
+    height: 210px;
     background-position: 50%;
     background-size: cover;
     padding: 0;
     margin: 0;
+
+    @include onTablet {
+      height: 390px;
+    }
+
+    @include onDesktop {
+      height: 550px;
+    }
 
     &--wraper {
       display: flex;
@@ -221,7 +229,7 @@
   &__info {
     display: flex;
     justify-content: space-around;
-
+    align-items: center;
   
     @include onTablet {
       justify-content: space-between;
