--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -12,7 +12,7 @@
 
     @include onDesktop {
       flex-direction: row;
-
+      margin-bottom: 87px;
       padding-right: 100px;
     }
   }
@@ -36,6 +36,17 @@
   }
 
   &__imgTitle {
+    background-image: url(../images/NAMU.svg);
+    background-repeat: no-repeat;
+    height: 72px;
+    width: 72px;
+
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
     @include onTablet {
       margin-bottom: 62px;
     }
@@ -48,10 +59,24 @@
 
   }
 
+  &__networks {
+    display: flex;
+    align-items: center;
+  }
+
   &__fecebook {
     width: 24px;
     height: 24px;
     margin-right: 20px;
+    background-image: url(../images/facebook-letter-logo.svg);
+    background-repeat: no-repeat;
+    display: block;
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
 
     @include onTablet {
       margin-right: 32px;
@@ -63,8 +88,16 @@
   }
 
   &__instagram {
+    display: block;
     width: 24px;
     height: 24px;
+    background-image: url(../images/inst.svg);
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
   }
 
   &__wraper {
@@ -74,7 +107,7 @@
     
     @include onTablet {
       flex-direction: row;
-      gap: 20px;
+      gap: 40px;
       margin-bottom: 64px;
       padding-right: 120px;
 
@@ -82,6 +115,8 @@
 
     @include onDesktop {
       margin: 0;
+      gap: 0;
+      padding-right: 65px;
     }
   }
 
@@ -91,13 +126,23 @@
   }
 
   &__text {
-    width: 130px;
     color: $text-color;
     font-family: IBM Plex Sans, sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
+    text-decoration: none;
+    display: block;
+
+    &--hover {
+      transition: all 0.3s;
+
+      &:hover {
+        transform: scale(1.01);
+      }
+    }
+
 
     @include onTablet {
       width: 170px;
@@ -119,9 +164,20 @@
   }
 
   &__link {
+    font-family: IBM Plex Sans, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
     display: block;
     text-decoration: none;
     color: $text-color;
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.01);
+    }
+
   }
 
   &__weekend {
@@ -143,7 +199,7 @@
   }
 
   &__line {
-    background-color: $color-green;
+    background-color: rgba(26, 90, 76, 0.50);;
     width: 100%;
     height: 1px;
     margin-bottom: 40px;
@@ -151,13 +207,12 @@
     @include onTablet {
       width: 460px;
       margin: 0 auto 64px;
-      
-
     }
 
     @include onDesktop {
       height: 260px;
       width: 1px;
+      margin: 0 65px 0 0;
     }
   }
 
@@ -181,15 +236,18 @@
 
   &__navigation {
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 70px;
+    margin-bottom: 80px;
+    gap: 20px;
+
 
     @include onTablet {
       margin-bottom: 120px;
+      margin: 0 auto;
     }
 
     @include onDesktop {
-      margin-bottom: 87px;
+      gap: 31px;
+      margin: 0;
     }
   }
 
@@ -220,7 +278,7 @@
     justify-content: space-between;
 
     @include onDesktop {
-      gap: 30px;
+      gap: 31px;
     }
   }
 
