--- a/src/styles/block/gallery.scss
+++ b/src/styles/block/gallery.scss
@@ -79,6 +79,14 @@
     background-color: rgb(228, 214, 214);
     transition: all 0.3s;
 
+    &--last {
+      display: none;
+
+      @include onTablet {
+        display: block;
+      }
+    }
+
     &:checked {
       color: $color-green;
       background-color: $color-green;
@@ -87,6 +95,7 @@
     &:hover {
       transform: scale(1.4);
     }
+
   }
 
   &__img {
