--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -51,8 +51,19 @@
     font-size: 30px;
     line-height: 100%;
     color: #0f0e08;
+    margin-top: 9px;
+
+    &--img {
+      height: 72px;
+      transition: all 0.3s;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
 
     @include onTablet {
+      margin-top: 15px;
       width: 220px;
       left: 0;
       transform: translateX(0);
@@ -93,7 +104,7 @@
     @include onDesktop {
       font-size: 72px;
       width: 470px;
-      padding-top: 206px 0 89px;
+      padding: 206px 0 89px;
     }
   }
 
@@ -101,6 +112,15 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.01);
+    }
+
+    @include onDesktop {
+      margin-left: 187px;
+    }
   }
 
   &__link {
@@ -144,6 +164,7 @@
 
   &__main {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     margin-left: 14px;
   }
@@ -157,7 +178,7 @@
     color: #687480;
     transform: rotate(-90deg);
     position: relative;
-    top: 43px;
+    top: 25px;
     display: none;
     text-decoration: none;
 
