--- a/src/styles/block/menu.scss
+++ b/src/styles/block/menu.scss
@@ -9,6 +9,7 @@
 
   &__nav {
     display: flex;
+    justify-content: space-between;
     margin-bottom: 24px;
 
     @include onTablet {
@@ -38,7 +39,7 @@
       }
 
       @include onDesktop {
-        margin-right: 3px;
+        margin-right: 31px;
       }
     }
   }
@@ -73,15 +74,16 @@
     text-decoration: none;
 
     font-family: IBM Plex Sans, sans-serif;
+    font-size: 16px;
     font-style: normal;
     font-weight: 500;
-    font-size: 22px;
     line-height: 100%;
     display: block;
     width: 100px;
+
     @include onDesktop {
       width: 160px;
-
+      font-size: 22px;
     }
   }
   
@@ -112,6 +114,23 @@
       margin: 0;
     }
   }
+
+  &__background {
+    // background-color: #18181A;
+    // width: 100%;
+    // height: 100%;
+      // position: relative;
+
+    // &::after {
+    //   content: "";
+    //   position: absolute;
+    //   right: 0;
+    //   left: 0;
+    //   bottom: 0;
+    //   background-color: #18181A;
+    //   width: 100%;
+    // }
+  }
 }
 
 .schedule {
@@ -124,6 +143,7 @@
     line-height: 150%;
     color: $clor-white;
     margin: 0 0 20px;
+
     &--days {
       margin: 0;
 
@@ -140,7 +160,7 @@
   &__dayoff {
     font-family: IBM Plex Sans, sans-serif;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 400;
     font-size: 14px;
     line-height: 150%;
     color: $clor-white;
@@ -150,5 +170,16 @@
     @include onTablet {
       width: 144px;
     }
+  }
+
+  &__days {
+    color: #FFF;
+    font-family: IBM Plex Sans, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    margin-bottom: 20px;
+    display: block;
   }
 }
