--- a/src/styles/block/page.scss
+++ b/src/styles/block/page.scss
@@ -4,9 +4,14 @@
 
   &__body {
     margin: 0;
+    background-color: #fff;
 
     &--with-menu {
       overflow: hidden;
+      // background-color: rgba(0,0,0,.25);
+      background: #18181A;
+      // opacity: 2;
+      z-index: 3;
     }
   }
 }
