--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,100 @@
+@mixin onTablet {
+  @media (min-width: $tablet-min-width) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: $desktop-min-width) {
+    @content;
+  }
+}
+
+@mixin wrapper () {
+  padding-inline: 20px;
+
+  @include onTablet {
+    padding-inline: 39px;
+  }
+
+  @include onDesktop {
+    max-width: $desktop-max-width;
+    margin-inline: auto;
+    padding-inline: 55px;
+  }
+}
+
 @mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
+  transition: #{$_property} $transition-duration;
   &:hover {
     #{$_property}: $_toValue;
+  }
+}
+
+@mixin grid() {
+  --columns: 2;
+  display: grid;
+  column-gap: 20px;
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @include onTablet {
+    --columns: 6;
+    column-gap: 30px;
+  }
+
+  @include onDesktop {
+    --columns: 12;
+  }
+}
+
+@mixin styleArticleCategory {
+  font-weight: 500;
+  color: $c-grey;
+  text-transform: uppercase;
+  line-height: 100%;
+}
+
+@mixin styleArticleDate {
+  color: $c-main;
+  line-height: 150%;
+  font-weight: 700;
+}
+
+@mixin styleArticleTitle {
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 100%;
+  color: $c-button-text;
+
+  @include onTablet {
+    font-size: 36px;
+  }
+}
+
+@mixin footerLinksHover {
+  &::after {
+    content: "";
+
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+
+    display: block;
+    width: 100%;
+    height: 100%;
+
+    background-color: $c-red;
+    border-radius: 2px;
+
+    opacity: 0.7;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform $transition-duration ease-in-out;
+    z-index: -2;
+  }
+
+  &:hover::after {
+    transform-origin: center;
+    transform: scaleX(1);
   }
 }
