Fix animations in the checkout list

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -53,8 +53,7 @@
 
     @include onTablet {
       flex-basis: 45%;
-
-      @include hover(transform, translateY(-15px));
+      @include hover(transform, scale(1.05));
     }
 
     &--vertical {
