Fixed hover effect

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -66,6 +66,10 @@
     margin-bottom: var(--margin-bottom);
     transition: transform $transition-duration;
 
+    &:hover {
+      @include hover(transform, scale(1.05));
+    }
+
     @include onTablet {
       --height: 520px;
       --margin-bottom: 44px;
@@ -155,9 +159,5 @@
     @include onDesktop {
       grid-column: 1/-1;
     }
-  }
-
-  &:hover > &__image {
-    transform: scale(1.05);
   }
 }
