--- a/src/styles/block/menu.scss
+++ b/src/styles/block/menu.scss
@@ -119,7 +119,7 @@
     // background-color: #18181A;
     // width: 100%;
     // height: 100%;
-      // position: relative;
+    // position: relative;
 
     // &::after {
     //   content: "";
@@ -173,7 +173,7 @@
   }
 
   &__days {
-    color: #FFF;
+    color: #fff;
     font-family: IBM Plex Sans, sans-serif;
     font-size: 14px;
     font-style: normal;
