--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -77,7 +77,6 @@
       transform: scale(1.1);
     }
 
-
     @include onTablet {
       margin-right: 32px;
     }
@@ -143,7 +142,6 @@
       }
     }
 
-
     @include onTablet {
       width: 170px;
     }
@@ -199,7 +197,7 @@
   }
 
   &__line {
-    background-color: rgba(26, 90, 76, 0.50);;
+    background-color: rgba(26, 9, 76, .5);
     width: 100%;
     height: 1px;
     margin-bottom: 40px;
@@ -238,11 +236,8 @@
     display: flex;
     margin-bottom: 80px;
     gap: 20px;
-
-
     @include onTablet {
-      margin-bottom: 120px;
-      margin: 0 auto;
+      margin: 0 auto 120px;
     }
 
     @include onDesktop {
