--- a/src/styles/block/page.scss
+++ b/src/styles/block/page.scss
@@ -8,10 +8,17 @@
 
     &--with-menu {
       overflow: hidden;
-      // background-color: rgba(0,0,0,.25);
-      background: #18181A;
-      // opacity: 2;
-      z-index: 3;
+
+      .background {
+        width: 100%;
+        height: 100vh;
+        background: #18181a;
+        position: absolute;
+        // right: 0;
+        // left: 0;
+        opacity: 0.7;
+        z-index: 1;
+      }
     }
   }
 }
