--- a/src/styles/block/section.scss
+++ b/src/styles/block/section.scss
@@ -9,18 +9,8 @@
     background-color: $color-green;
     transform: translateX(-100%);
     transition: all 0.3s;
+    z-index: 2;
 
-    // &::after {
-    //   content: "";
-    //   position: absolute;
-    //   right: 0;
-    //   left: 0;
-    //   bottom: 0;
-    //   background-color: #18181A;
-    //   display: block;
-    //   width: 100%;
-    //   z-index: ;
-    // }
 
     &:target {
       transform: translateX(0);
