--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -197,7 +197,7 @@
   }
 
   &__line {
-    background-color: rgba(26, 9, 76, .5);
+    background-color: rgba(26, 9, 76, 0.5);
     width: 100%;
     height: 1px;
     margin-bottom: 40px;
