--- a/src/styles/block/event.scss
+++ b/src/styles/block/event.scss
@@ -208,11 +208,12 @@
   &__container {
 
     max-width: 570px;
-    box-shadow: rgba(26, 90, 76, 0.25);
     background-color: $clor-white;
     transform: translateY(-40%);
     padding: 20px 0;
     margin: 0 20px 100px;
+    box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
+;
 
     @include onTablet {
       padding: 45px 55px 50px;
