--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+$design-min-width: 1440px;
+
 $c-gray: #eee;
+$c-white: #fff;
+$c-black: #0f0e08;
+$c-green: #1a5a4c;
+$c-placeholder-email: #687480;
+$c-red: #f14a27;
+$c-description: #4e4e4e;
