--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,3 +1,6 @@
 @import "utils/vars";
 @import "utils/mixins";
 @import "utils/extends";
+@import "utils/reset";
+@import "utils/icon";
+@import "utils/hover";
