--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "utils/vars";
+@import "utils/mixins";
+@import "blocks/page";
+@import "blocks/icons";
+@import "blocks/logo";
+@import "blocks/header";
+@import "blocks/navigation";
+@import "blocks/menu";
+@import "blocks/actual";
+@import "blocks/galery";
+@import "blocks/subscribe";
+@import "blocks/footer";
+@import "blocks/button";
+@import "blocks/slider";
