--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,1 +1,173 @@
 @import "./reset.scss";
+@import "./utils/variables";
+@import "./utils/mixins";
+
+.page {
+  &__body {
+    min-width: 320px;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    color: $black;
+    line-height: 150%;
+  }
+}
+
+h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 100%;
+}
+
+h2 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 100%;
+}
+
+h3 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 100%;
+}
+
+.icon {
+  display: block;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.container {
+  padding: 0 20px;
+}
+
+.header {
+  height: 300px;
+  margin-bottom: 20px;
+  padding-top: 9px;
+  background-image: url("../images/header/main-poster.png");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: contain;
+
+  &__top-action {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    justify-content: space-between;
+    margin-right: 113px;
+  }
+
+  &__main-logo {
+    width: 55px;
+    height: 61px;
+    background-image: url("../images/icons/NA-MU__logo.svg");
+  }
+
+}
+
+.menu {
+  &-button {
+    width: 24px;
+    height: 24px;
+    background-image: url("../images/icons/menu-button__open.svg");
+  }
+}
+
+.art-museum {
+  margin-bottom: 70px;
+
+  &__title {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+
+  &__button {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 100%;
+    border: 1px solid $green;
+    border-right-width: 50px;
+    font-weight: 500;
+    line-height: 100%;
+
+    &-arrow {
+      position: absolute;
+      right: -37px;
+      width: 24px;
+      height: 24px;
+      background-image: url("../images/blocks/museum/button__arrow-right.svg");
+      background-repeat: no-repeat;
+    }
+  }
+}
+
+.events {
+  &__title {
+    margin-bottom: 40px;
+    text-align: center;
+  }
+
+  &-card {
+    margin-bottom: 60px;
+
+    &__image {
+      margin-bottom: 16px;
+      width: 100%;
+      height: 210px;
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+
+      &-1 {
+        background-image: url("../images/blocks/events/img-1.png");
+      }
+
+      &-2 {
+        background-image: url("../images/blocks/events/img-2.png");
+      }
+    }
+
+    &__type {
+      margin-bottom: 15px;
+      color: $greyBoldText;
+      font-weight: 500;
+      line-height: 150%;
+    }
+
+    &__schedule {
+      color: $green;
+      font-weight: 700;
+      line-height: 150%;
+    }
+
+    &__info {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &__title {
+      margin-bottom: 15px;
+
+      &::after {
+        content: "";
+        background-image: url("../images/icons/rectangle__red.svg");
+        display: inline-block;
+        height: 10px;
+        width: 10px;
+        margin-left: 12px;
+        transform: translateY(-25%);
+      }
+    }
+
+    &__description {
+      width: 281px;
+      font-size: 16px;
+    }
+  }
+}
