implement lections block

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -171,3 +171,46 @@ h3 {
     }
   }
 }
+
+.lections {
+  margin-bottom: 100px;
+
+  &__poster {
+    height: 210px;
+    background-image: url("../images/blocks/history/img-1.png");
+  }
+
+  &__info {
+    display: flex;
+    flex-direction: column;
+    height: 140px;
+    background-color: $white;
+    transform: translateY(-50%);
+
+    &-wrapper {
+      display: flex;
+      justify-content: space-between;
+      padding: 20px 21px;
+    }
+  }
+
+  &__title {
+    width: 100%;
+    padding-bottom: 20px;
+    text-align: center;
+    border-bottom: 2px solid $green;
+  }
+
+  &__type {
+    margin-bottom: 15px;
+    color: $greyBoldText;
+    font-weight: 500;
+    line-height: 150%;
+  }
+
+  &__schedule {
+    color: $green;
+    font-weight: 700;
+    line-height: 150%;
+  }
+}
