Gallery issue question

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -4,9 +4,18 @@
     margin-bottom: 104px;
   }
 
-  // &__image {
-  //   overflow: hidden;
-  // }
+  &__image {
+    // overflow: hidden;
+    box-sizing: border-box;
+
+    @include onTablet {
+      margin-bottom: 44px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 0;
+    }
+  }
 
   &__description {
     margin: auto 0;
@@ -89,15 +98,12 @@
   }
 
   &__big-block {
-    position: absolute;
-    bottom: -97px;
-    padding: 50px 100px;
+    margin: 0 auto;
+    width: 370px;
+    height: 204px;
+    transform: translateY(-50%);
+    padding: 45px 100px;
     background-color: #fff;
-
-    &-container {
-      position: relative;
-      // margin: 0 auto;
-    }
   }
 
   &__image--big {
