--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,18 +1,21 @@
 .page {
+  // max-width: 100%;
+  // overflow-x: hidden;
 
   &__body {
     position: relative;
     margin: 0;
-    background-color: #fff;
     transition: all 0.3s;
 
     &--with-menu {
+      z-index: 1;
       overflow: hidden;
       background-color: rgba(0, 0, 0, 0.25);
     }
   }
 
   &__section {
+    // height: 1000px;
 
     @include onTablet {
       margin-bottom: 88px;
@@ -23,7 +26,7 @@
     }
 
     &--events {
-      margin-bottom: 251px;
+      margin-bottom: 151px;
     }
 
     &--contacts {
