--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -18,7 +18,14 @@
     display: flex;
     justify-content: center;
     align-items: start;
-    gap: 30px;
+
+    @include onTablet {
+      gap: 38px;
+    }
+
+    @include onDesktop {
+      gap: 30px;
+    }
 
     &--footer {
       flex-direction: column;
