--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -4,8 +4,12 @@
   // width: auto;
   padding: 0 20px;
 
+  @include onMobile {
+    padding: 20px;
+  }
+
   @include onTablet {
-    padding: 0 39px;
+    padding: 0 34px;
   }
 
   @include onDesktop {
