--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -6,14 +6,16 @@
     right: 0;
     z-index: -1;
     background-image: url(../images/Main-page-photo.jpg);
-    background-position: 50%;
-    background-size: cover;
+    // background-position: 50%;
+    background-size: contain;
     background-repeat: no-repeat;
 
     @include onTablet {
       height: 384px;
       background-position: 20%;
       // background-size: contain;
+      // top: -40px;
+      // right: 0;
       width: 48%;
     }
 
