--- a/src/styles/blocks/actual.scss
+++ b/src/styles/blocks/actual.scss
@@ -24,6 +24,14 @@
     grid-column: span 2;
     @include photoContainer;
 
+    transition: transform $transitionDuration;
+
+    @include onDesktop {
+      &:hover {
+        transform: scale(1.05);
+      }
+    }
+
     @include onTablette {
       max-height: 520px;
       grid-column: 1 / 7;
