--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -166,4 +166,14 @@
       grid-column: span 12;
     }
   }
+
+  &__contacts-link {
+    display: block;
+    text-decoration: none;
+    color: $mainBlack;
+
+    &:hover {
+      transform: scale($hoverScaleSize);
+    }
+  }
 }
