--- a/src/styles/blocks/galery.scss
+++ b/src/styles/blocks/galery.scss
@@ -30,5 +30,12 @@
   &__photo {
     @include photo;
     object-position: top;
+    transition: transform $transitionDuration;
+
+    @include onDesktop {
+      &:hover {
+        transform: scale(1.05);
+      }
+    }
   }
 }
