--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -9,7 +9,6 @@
   color: #fff;
 
   &__content {
-    height: max-content;
     max-width: 1170px;
     padding: 27px 0 0;
     overflow-y: auto;
@@ -30,7 +29,6 @@
     @include onDesktop {
       --columns: 12;
       margin: 0 auto;
-      //padding-inline: 0 55px 0;
     }
   }
 
@@ -38,15 +36,15 @@
     grid-column: span 2;
     display: flex;
     gap: 28px;
-    height: max-content;
     margin-bottom: 24px;
 
     @include onTablette {
-      grid-column: 1 / 5;
+      grid-column: 1 / 3;
+      gap: 31px;
     }
 
     @include onDesktop {
-      grid-column: 1 / 6;
+      grid-column: 1 / 7;
     }
   }
 
@@ -57,9 +55,10 @@
     margin-bottom: 24px;
 
     @include onTablette {
+      margin: 0 auto 24px;
       width: 1px;
       height: 80%;
-      grid-column: span 1;
+      grid-column: 3 / 4;
     }
 
     @include onDesktop {
