--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -36,13 +36,68 @@
     margin: 0 0 50px;
   }
 
-  &__button {
-    font-family: "IBM Plex Sans", sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 14px;
-    text-align: left;
-    color: #687480;
+  &__form-field {
+    box-sizing: border-box;
+    flex-grow: 1;
     background-color: #fff;
+    height: 100%;
+    padding: 0;
+    border: none;
+    padding-left: 24px;
+
+    &::placeholder {
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 14px;
+      text-align: left;
+      color: #687480;
+    }
+  }
+
+  &__form-container {
+    grid-column: span 2;
+
+    @include onTablette {
+      column-gap: 16px;
+      grid-column: 2 / 6;
+    }
+
+    @include onDesktop {
+      grid-column: 4 / 10;
+      column-gap: 30px;
+    }
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: row;
+    height: 50px;
+    justify-content: space-between;
+
+    @include onTablette {
+      height: 70px;
+    }
+
+  }
+
+  &__button {
+    box-sizing: border-box;
+    display: flex;
+    height: 100%;
+    width: 50px;
+    background-image: url(../images/buttons/subscribeButton.svg);
+    background-position: center;
+    border: none;
+
+    @include onTablette {
+      height: 70px;
+      width: 70px;
+      margin-left: 16px;
+    }
+
+    @include onDesktop {
+      margin-left: 30px;
+    }
   }
 }
