Fix hover effects

--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -28,6 +28,8 @@
     }
 
     @include onDesktop {
+      overflow: hidden;
+      margin-right: 0;
       flex-shrink: 1;
     }
 
@@ -52,6 +54,7 @@
     &--4 {
       @include onDesktop {
         grid-column: 9 / 13;
+        margin-right: 0;
       }
     }
   }
