--- a/src/styles/blocks/exhibit.scss
+++ b/src/styles/blocks/exhibit.scss
@@ -15,7 +15,7 @@
     transition: all 0.3s;
 
     &:hover {
-      transform: scale(1.02)
+      transform: scale(1.02);
     }
   }
 
@@ -25,7 +25,7 @@
     transition: all 0.3s;
 
     &:hover {
-      transform: scale(1.02)
+      transform: scale(1.02);
     }
   }
 
