--- a/src/styles/blocks/actual.scss
+++ b/src/styles/blocks/actual.scss
@@ -47,6 +47,11 @@
       @include onTablette {
         @include paddingInline;
       }
+
+      @include onDesktop {
+        padding-inline: 0;
+        width: 100%;
+      }
     }
   }
 
