--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -123,6 +123,7 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
+    color: $mainBlack;
 
     @include onDesktop {
       align-self: flex-end;
