--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -9,7 +9,6 @@
   color: #fff;
 
   &__content {
-    max-width: 1170px;
     padding: 27px 0 0;
     overflow-y: auto;
     display: grid;
@@ -32,22 +31,6 @@
     }
   }
 
-  &__top-container {
-    grid-column: span 2;
-    display: flex;
-    gap: 28px;
-    margin-bottom: 24px;
-
-    @include onTablette {
-      grid-column: 1 / 3;
-      gap: 31px;
-    }
-
-    @include onDesktop {
-      grid-column: 1 / 7;
-    }
-  }
-
   &__divider {
     grid-column: span 2;
     height: 1px;
@@ -64,26 +47,21 @@
     @include onDesktop {
       grid-column: 7 / 8;
       width: 1px;
+      margin: 0 0 24px;
     }
   }
 
   &__top-content {
-    height: max-content;
     display: flex;
     justify-content: space-around;
-    align-items: start;
     gap: 28px;
     grid-column: span 2;
-  }
 
-  &__1 {
-    grid-column: 1 / 2;
-    justify-content: left;
-  }
-
-  &__2 {
-    grid-column: 2 / 3;
-    height: max-content;
+    @include onDesktop {
+      display: flex;
+      justify-content: space-between;
+      grid-column: 1 / 5;
+    }
   }
 
   &__description {
@@ -122,7 +100,6 @@
     text-decoration: none;
     font-weight: 500;
     font-size: 16px;
-    line-height: 16px;
     text-align: left;
 
     &--footer {
