--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -9,7 +9,7 @@
 
   &__body {
     min-width: 320px;
-    max-width: 1280px;
+
     margin: 0 auto;
 
     &:has(.page__menu:target) {
@@ -74,6 +74,7 @@
   }
 
   &__section-content {
+    max-width: 1280px;
     display: grid;
     column-gap: 20px;
     --columns: 2;
@@ -89,6 +90,8 @@
 
     @include onDesktop {
       --columns: 12;
+      margin: 0 auto;
+      padding-inline: 0;
     }
   }
 
